Upgrade to spring-javaformat 0.0.11